[gd_scene load_steps=24 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Menu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Roboto-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Musics/PopLogo.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="CanvasItemMaterial" id=5]

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0.00980392, 0.730682 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.167045 ), -0.593455, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 1, 1, 1, 0.192157, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.270588, 0.403922, 0.513726, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.164706, 0.266667, 0.352941, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.207843, 0.333333, 0.439216, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.164706, 0.266667, 0.352941, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=8]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="Shader" id=16]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=17]
shader = SubResource( 16 )
shader_param/blur_amount = 2.0

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0.984314 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.8, 0.8, 0.8, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=15]
size = 40
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
_buttons = [ NodePath("Menu/VBoxContainer/Jogar"), NodePath("Menu/VBoxContainer/ComoJogar"), NodePath("Menu/VBoxContainer/Sair") ]
_godot = NodePath("TextureRect2")

[node name="Tween" type="Tween" parent="."]

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 12.0
margin_right = 5.0
margin_bottom = 12.0
mouse_filter = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu"]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 69.0
margin_top = -29.0
margin_right = 469.0
margin_bottom = 151.0
custom_constants/separation = 0

[node name="Jogar" type="Button" parent="Menu/VBoxContainer2"]
margin_right = 400.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 30 )
focus_neighbour_top = NodePath("../Sair")
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Jogar"
flat = true
align = 0

[node name="Sair" type="Button" parent="Menu/VBoxContainer2"]
margin_top = 60.0
margin_right = 400.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 30 )
focus_neighbour_bottom = NodePath("../Jogar")
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Fullscreen"
flat = true
align = 0

[node name="ComoJogar" type="Button" parent="Menu/VBoxContainer2"]
margin_top = 120.0
margin_right = 400.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 30 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Como jogar"
flat = true
align = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 68.0
margin_top = -30.0
margin_right = 468.0
margin_bottom = 150.0
custom_constants/separation = 0

[node name="Jogar" type="Button" parent="Menu/VBoxContainer"]
margin_right = 400.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 30 )
focus_neighbour_top = NodePath("../Sair")
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Jogar"
flat = true
align = 0

[node name="Sair" type="Button" parent="Menu/VBoxContainer"]
margin_top = 60.0
margin_right = 400.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 30 )
focus_neighbour_bottom = NodePath("../Jogar")
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Fullscreen"
flat = true
align = 0

[node name="ComoJogar" type="Button" parent="Menu/VBoxContainer"]
margin_top = 120.0
margin_right = 400.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 30 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Como jogar"
flat = true
align = 0

[node name="TextureRect" type="TextureRect" parent="Menu"]
modulate = Color( 100, 100, 100, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1030.0
margin_top = -58.0
margin_right = -1007.0
margin_bottom = -35.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="Menu/TextureRect"]
modulate = Color( 100, 100, 100, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 8.5
margin_top = -11.5
margin_right = 19.5
margin_bottom = -3.5
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Menu/TextureRect"]
modulate = Color( 100, 100, 100, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.5
margin_top = -18.5
margin_right = -3.5
margin_bottom = -3.5
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="TextureRect4" type="TextureRect" parent="Menu/TextureRect"]
modulate = Color( 100, 100, 100, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 4.5
margin_top = -8.5
margin_right = 12.5
margin_bottom = -2.5
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="TextureRect5" type="TextureRect" parent="Menu/TextureRect"]
modulate = Color( 100, 100, 100, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.5
margin_top = -12.5
margin_right = -2.5
margin_bottom = -6.5
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="Label" type="RichTextLabel" parent="Menu"]
margin_left = 68.0
margin_top = 57.0
margin_right = 443.0
margin_bottom = 128.0
mouse_filter = 1
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[wave][rainbow]GODOLAND"
text = "GODOLAND"
scroll_active = false

[node name="Label2" type="RichTextLabel" parent="Menu"]
margin_left = -91.0
margin_top = 37.0
margin_right = 597.0
margin_bottom = 202.0
mouse_filter = 1
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[wave][center]Dominion"
text = "Dominion"
scroll_active = false

[node name="CPUParticles2D" type="CPUParticles2D" parent="Menu"]
material = SubResource( 5 )
position = Vector2( 1280, -54 )
amount = 50
lifetime = 4.0
randomness = 1.0
local_coords = false
texture = ExtResource( 1 )
emission_shape = 2
emission_rect_extents = Vector2( 1500, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.2
angular_velocity = 224.59
angular_velocity_random = 1.0
scale_amount_curve = SubResource( 6 )
color_ramp = SubResource( 7 )

[node name="Button" type="Button" parent="Menu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 68.0
margin_top = -47.0
margin_right = 209.0
margin_bottom = -24.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
text = "Sobre a Jam"

[node name="Como jogar" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1280.0
margin_right = 1280.0

[node name="Label" type="Label" parent="Como jogar"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -91.5
margin_top = 57.0
margin_right = 91.5
margin_bottom = 99.0
custom_fonts/font = SubResource( 8 )
text = "Como jogar"

[node name="Label2" type="Label" parent="Como jogar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 12 )
text = "Controles:
Todas as ações são feitas com o mouse.

Mecânica:
Clicar no ícone da Godot o suficiente para conseguir melhorias.

História:
A história se divide nas conquistas que são desbloqueadas
com a compra das melhorias."
align = 1
valign = 1

[node name="Voltar2" type="Button" parent="Como jogar"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -466.0
margin_top = -78.0
margin_right = -66.0
margin_bottom = -18.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 30 )
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Voltar"
flat = true
align = 2

[node name="Voltar" type="Button" parent="Como jogar"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -468.0
margin_top = -79.0
margin_right = -68.0
margin_bottom = -19.0
rect_min_size = Vector2( 0, 60 )
rect_pivot_offset = Vector2( 0, 30 )
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.333333, 0.439216, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Voltar"
flat = true
align = 2

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 68.0
margin_top = -129.0
margin_right = 132.0
margin_bottom = -65.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 1 )

[node name="Pop" type="AudioStreamPlayer" parent="TextureRect2"]
stream = ExtResource( 6 )

[node name="fundoo" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="fundoo"]
material = SubResource( 17 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="fundoo"]
modulate = Color( 0, 0, 0, 0.654902 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -432.0
margin_top = -109.5
margin_right = 432.0
margin_bottom = 109.5
rect_pivot_offset = Vector2( 432, 109.5 )
mouse_filter = 2
custom_styles/panel = SubResource( 13 )

[node name="Panel" type="Panel" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -36.0
margin_top = -26.0
margin_right = 26.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 31, 31 )
custom_styles/panel = SubResource( 14 )

[node name="Button" type="Button" parent="Panel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = 44.9647
rect_pivot_offset = Vector2( 31, 31 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.862745, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
enabled_focus_mode = 0
text = "+"
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 432, 282 )
mouse_filter = 2

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
margin_right = 864.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 55 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 12 )
text = "Godot Jam"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 59.0
margin_right = 864.0
margin_bottom = 63.0

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
margin_top = 107.0
margin_right = 864.0
margin_bottom = 179.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 12 )
text = "Em prol da avaliação acelerada do jogo, este teve suas mecânicas facilitadas e o rítmo do jogo acelerado."
align = 1
valign = 1
autowrap = true

[connection signal="focus_entered" from="Menu/VBoxContainer2/Jogar" to="." method="_on_Jogar_focus_entered"]
[connection signal="pressed" from="Menu/VBoxContainer2/Jogar" to="." method="_on_Jogar_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer2/Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer2/ComoJogar" to="." method="_on_ComoJogar_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Jogar" to="." method="_on_Jogar_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ComoJogar" to="." method="_on_ComoJogar_pressed"]
[connection signal="pressed" from="Menu/Button" to="." method="_on_Jam_pressed"]
[connection signal="pressed" from="Como jogar/Voltar2" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="Como jogar/Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="mouse_entered" from="TextureRect2" to="." method="_on_TextureRect2_mouse_entered"]
[connection signal="pressed" from="Panel/Panel/Button" to="." method="_on_Close_pressed"]
